--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -16,10 +16,10 @@ jobs:
     steps: 
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Setup DotNet ${{ inputs.dotnet-version }}
+    - name: Setup DotNet 
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: ${{ inputs.dotnet-version }}
+        dotnet-version: 8.0.x
     - name: restore dependencies
       run: dotnet restore ${{ inputs.project-path }}
     - name: Build
