--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -7,12 +7,12 @@ on:
       dotnet-version:
         required: true
         type: string
-      os:
-        required: true
-        type: string
       beta:
         type: boolean
         default: false
+      os:
+        required: true
+        type: string
       package-name:
         type: string
         required: true
@@ -24,13 +24,13 @@ jobs:
     - name: Build artifacts
       run: |
         dotnet build ${{ inputs.project-path }} -c Release
-        dotnet pack ${{ inputs.project-path }} -c Release -o ./dist/${{ inputs.os }}/${{inputs.package-name}} --version-suffix beta
+        dotnet pack ${{ inputs.project-path }} -c Release -o ./dist/${{inputs.package-name}} --version-suffix beta
     - name: zip release ${{inputs.package-name}} 
       uses: actions/zip-release@v1
       with:
         format: zip
         output: ${{inputs.package-name}} -${{ inputs.dotnet-version }}.zip
-        files: ./dist/${{ inputs.os }}/${{inputs.package-name}} 
+        files: ./dist/${{inputs.package-name}} 
   release-publish: 
     if: ${{inputs.beta == false}}
     runs-on: ${{inputs.os}}
@@ -38,10 +38,10 @@ jobs:
     - name: Build artifacts
       run: |
         dotnet build ${{ inputs.project-path }} -c Release
-        dotnet pack ${{ inputs.project-path }} -c Release -o ./dist/${{ inputs.os }}/${{inputs.package-name}} 
+        dotnet pack ${{ inputs.project-path }} -c Release -o ./dist/${{inputs.package-name}} 
     - name: zip release ${{inputs.package-name}} 
       uses: actions/zip-release@v1
       with:
         format: zip
-        output: ${{inputs.package-name}} -${{ inputs.dotnet-version }}.zip
-        files: ./dist/${{ inputs.os }}/${{inputs.package-name}} 
+        output: ${{inputs.package-name}}.zip
+        files: ./dist/${{inputs.package-name}} 
