--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -25,12 +25,12 @@ jobs:
       run: |
         dotnet build ${{ inputs.project-path }} -c Release
         dotnet pack ${{ inputs.project-path }} -c Release -o ./dist/${{inputs.package-name}} --version-suffix beta
-    - name: zip release ${{inputs.package-name}} 
-      uses: actions/zip-release@v1
+    - name: zip artifacts ${{inputs.package-name}} 
+      uses: TheDoctor0/zip-release@0.7.6
       with:
-        format: zip
-        output: ${{inputs.package-name}} -${{ inputs.dotnet-version }}.zip
-        files: ./dist/${{inputs.package-name}} 
+        type: zip
+        filename: ${{inputs.package-name}}.zip
+        path: ./dist/${{inputs.package-name}}  
   release-publish: 
     if: ${{inputs.beta == false}}
     runs-on: ${{inputs.os}}
